load("@rules_java//java:defs.bzl", "java_library")
load("@com_github_google_flatbuffers//:build_defs.bzl", "flatbuffer_library_public")

flatbuffer_library_public(
    name = "java_srcs",
    srcs = ["//schema:file"],
    outs = [
        "schema/Entry.java",
        "schema/Etymology.java",
    ],
    flatc_args = [
        "--gen-generated",
    ],
    language_flag = "-j",
)

java_library(
    name = "java",
    srcs = [":java_srcs"],
    visibility = ["//schema:__pkg__"],
    deps = ["@com_github_google_flatbuffers//java"],
)
