load("@rules_java//java:defs.bzl", "java_library")
load("@com_github_google_flatbuffers//:build_defs.bzl", "flatbuffer_library_public")

flatbuffer_library_public(
    name = "java_srcs",
    srcs = ["//schema:file"],
    outs = [
        "schema/Dictionary.java",
        "schema/Entry.java",
        "schema/Etymology.java",
        "schema/Group.java",
        "schema/POS.java",
        "schema/Usage.java",
    ],
    language_flag = "-j",
)

java_library(
    name = "java",
    srcs = [":java_srcs"],
    visibility = ["//visibility:public"],
    deps = ["@com_github_google_flatbuffers//java"],
)
