[package]
name = "odict-uniffi"
version = "3.2.2"
edition = "2021"

[lib]
name = "odict_uniffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
uniffi = { version = "=0.30.0", features = ["tokio"] }
odict = { path = "../../lib", features = [
  "config",
  "sql",
  "http",
  "alias",
  "tokenize",
  "search",
  "html",
  "markdown",
] }
internal = { path = "../../internal" }
structural-convert = { workspace = true }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt", "macros"] }
