
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "odict-lib",
    srcs = ["odict.cpp"],
    visibility = ["//visibility:public"],
    data = ["//bridge:archive.cc"],
    deps = [
        "//bridge:archive.cc",
        "//tools/jni:copy_jni_hdr_lib",
    ],
    alwayslink = True,
)

cc_binary(
    name = "libodict.so",
    linkshared = True,
    visibility = ["//java:__subpackages__"],
    deps = [":odict-lib"],
)