
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "odict-lib",
    srcs = ["odict.cpp"],
    data = ["//bridge:archive.cc"],
    visibility = ["//visibility:public"],
    deps = [
        "//bridge:archive.cc",
        "//tools/jni:copy_jni_hdr_lib",
    ],
    alwayslink = True,
)

cc_binary(
    name = "libodict.so",
    linkshared = True,
    visibility = ["//java:__subpackages__"],
    deps = [":odict-lib"],
)