load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

platform(
    name = "linux",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:arm",
    ],
)

cc_library(
    name = "odict-lib",
    srcs = ["odict.cpp"],
    platforms = [":linux"],
    visibility = ["//visibility:public"],
    deps = [
        "//bridge",
        "//tools/jni:copy_jni_hdr_lib",
    ],
    alwayslink = True,
)

cc_binary(
    name = "libodict.so",
    linkshared = True,
    visibility = ["//java:__subpackages__"],
    deps = [":odict-lib"],
)
