load("@rules_jvm_external//:defs.bzl", "java_export")
load("//:projectinfo.bzl", "maven", "version")

java_export(
    name = "odict",
    maven_coordinates = "{}:{}:{}:{}:{}".format(maven["group"], maven["artifact"], version["major"], version["minor"], version["patch"]),
    resources = ["//java/main/cpp:libodict.so"],
    visibility = ["//java:__pkg__"],
    srcs = glob(["**/*.java"]),
    deps = [
        "//schema/java",
        "@native_utils",
        "@odict_java_deps//:com_fasterxml_jackson_core_jackson_annotations",
        "@odict_java_deps//:com_fasterxml_jackson_core_jackson_core",
        "@odict_java_deps//:com_fasterxml_jackson_core_jackson_databind",
        "@odict_java_deps//:org_xerial_snappy_snappy_java",
    ],
)